[gd_scene load_steps=2 format=3 uid="uid://cule8xvwt1ral"]

[ext_resource type="Script" path="res://Scripts/GauntletSpawner.gd" id="1_lofiq"]

[node name="GauntletSpawn" type="Marker2D"]
position = Vector2(200, -53)
scale = Vector2(0.9, 0.9)
script = ExtResource("1_lofiq")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
autostart = true

[node name="Marker1" type="Marker2D" parent="."]
position = Vector2(197, 19)

[node name="Marker2" type="Marker2D" parent="."]
position = Vector2(295, -195)

[node name="Marker3" type="Marker2D" parent="."]
position = Vector2(194, 174)

[node name="Marker4" type="Marker2D" parent="."]
position = Vector2(92, 329)

[node name="Marker5" type="Marker2D" parent="."]
position = Vector2(-170, 339)

[node name="Marker6" type="Marker2D" parent="."]
position = Vector2(70, -323)

[node name="Marker7" type="Marker2D" parent="."]
position = Vector2(-233, -374)

[node name="Marker8" type="Marker2D" parent="."]
position = Vector2(-466, 275)

[node name="Marker12" type="Marker2D" parent="."]
position = Vector2(-299, 361)

[node name="Marker9" type="Marker2D" parent="."]
position = Vector2(-517, 76)

[node name="Marker10" type="Marker2D" parent="."]
position = Vector2(-439, -123)

[node name="Marker11" type="Marker2D" parent="."]
position = Vector2(-382, -314)

[node name="Marker13" type="Marker2D" parent="."]
position = Vector2(-102, -317)

[node name="Marker14" type="Marker2D" parent="."]
position = Vector2(-31, 300)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
